--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -102,11 +102,13 @@ h1 {
     position: absolute;
     top: 0px;
     left: 0px;
+    z-index:1 !important;
 }
-.gameCanvas {
+#gameCanvas {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: relative;
     top: 0px;
     left: 0px;
+    z-index:20 !important;
 }
