--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -163,6 +163,51 @@ h1 {
     left: 0px;
     z-index:1 !important;
 }
+.winImageBox {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index:1 !important;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.canvasCont {
+    width: 1920px;
+    display: flex;
+    justify-content: center;
+}
+.winImage {
+    width: 730px;
+    height: 127px;
+    margin-top: 20px;
+}
+#winnerText {
+    margin-top: 500px;
+}
+.playAgain {
+    width: 324px;
+    height: 83px;
+    margin-top: -100px;
+}
+#playerAgainBtn {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.2s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+}
+#playerAgainBtn:hover {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+    cursor: pointer;
+}
 #gameCanvas {
     width: 100%;
     height: 100%;
