--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -147,12 +147,12 @@ h1 {
     justify-content: center;
 }
 .outsideImageWrap {
-    width: 1920px;
-    height: 900px;
+    width: 1920px !important;
+    height: 900px !important;
 }
 .insideImageWrap {
-    width: 100%;
-    height: 100%;
+    width: 100% !important;
+    height: 100% !important;
     position: relative;
 }
 .mapImage {
@@ -178,20 +178,42 @@ h1 {
     width: 1920px;
     display: flex;
     justify-content: center;
+    z-index:1 !important;
 }
 .winImage {
     width: 730px;
     height: 127px;
     margin-top: 20px;
 }
+#winImageToken {
+    width: 300px;
+    height: 378px;
+    margin-top: 0px;
+}
 #winnerText {
-    margin-top: 500px;
+    margin-top: 0px;
 }
 .playAgain {
     width: 324px;
     height: 83px;
-    margin-top: -100px;
+    margin-top: -50px;
 }
+#gameCanvas {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    z-index:20 !important;
+}
+#winCanvas {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0px;
+    left: 0px;
+}
+
 #playerAgainBtn {
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
@@ -207,14 +229,6 @@ h1 {
     -webkit-transform: scale(0.9);
     transform: scale(0.9);
     cursor: pointer;
-}
-#gameCanvas {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    z-index:20 !important;
 }
 .gameButtonCont {
     margin-top: 30px;
